fixed css selector issue on firefox

--- a/src/routes/home/layout/GenerationForm/GenerationForm.scss
+++ b/src/routes/home/layout/GenerationForm/GenerationForm.scss
@@ -30,7 +30,7 @@
       border-radius: 0 16px 16px 0;
     }
 
-    &:has(input:checked) {
+    &[aria-selected="true"] {
       background-color: rgb(70, 70, 70);
     }
 
